--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ navigationLinks:
  - {permalink: "/team/", text: "Team"}
 
 rightNavigationButtons:
- - {permalink: "/#tickets", text: "Buy tickets"}
+ - {link: "https://ti.to/iosconfsg/2020", text: "Buy tickets"}
 
 # Hero Block
 heroImage: "hero.jpg"
