Update sponsor logo

--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -1,7 +1,8 @@
 - 
   group: "Gold Sponsors 🏆"
   elements:
-    - {name: "SP Digital", description: "SP Digital", link: "https://www.spdigital.io", imageUrl: "spdigital.svg"}
+    - {name: "Traveloka", description: "Traveloka", link: "https://www.traveloka.com", imageUrl: "traveloka.png"}
     - {name: "SeaGroup", description: "SeaGroup", link: "https://www.seagroup.com/", imageUrl: "seagroup.png"}
+    - {name: "SP Digital", description: "SP Digital", link: "https://www.spdigital.io", imageUrl: "spdigital.svg"}
 
 
