--- a/_data/team.yml
+++ b/_data/team.yml
@@ -65,6 +65,7 @@
   social: 
     - {name: "twitter", link: "https://twitter.com/vinamelody"}
     - {name: "linkedin", link: "https://www.linkedin.com/in/vinamelody"}
+    - {name: "github", link: "https://github.com/vinamelody"}
 
 - 
   id: 6
