--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -1,9 +1,8 @@
 - 
   group: "Gold Sponsors 🏆"
   elements:
-    - {name: "Cookpad", description: "Cookpad", link: "https://apply.workable.com/cookpad", imageUrl: "cookpad.png"}    
+    - {name: "Cookpad", description: "Cookpad", link: "https://apply.workable.com/cookpad", imageUrl: "cookpad.png"}
+    - {name: "Bitrise", description: "Bitrise", link: "https://www.bitrise.io/", imageUrl: "bitrise.png"}
     - {name: "SeaGroup", description: "SeaGroup", link: "https://www.seagroup.com/", imageUrl: "seagroup.png"}
     - {name: "Traveloka", description: "Traveloka", link: "https://www.traveloka.com/en-id/about-us", imageUrl: "traveloka.png"}
     - {name: "SP Digital", description: "SP Digital", link: "https://www.spdigital.io", imageUrl: "spdigital.svg"}
-
-
